@@ -4,6 +4,7 @@
 	* Set TYPO3 version constraint to 6.0.6-6.1.99
 	* Delete unused partials
 	* Fix domain model inconsistencies
+	* Refactor findAllOrderedByLocalizedName
 
 2013-05-20  Stanislas Rolland  <typo3@sjbr.ca>
 
